Fix horizontal scroll layout

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,52 +1,64 @@
-:global body {
-  padding: 0;
-  margin: 0;
-  overflow-y: scroll;
+:global {
+  html, body, #root {
+    height: 100%;
+  }
 
-  .playground-gallery {
-    float: right;
-    border: none;
+  body {
     padding: 0;
     margin: 0;
-    background: white;
-    transition: width 0.4s ease;
-  }
+    overflow: hidden;
 
-  .playground-gallery.closed {
-    width: 100%;
-  }
-
-  .toggle-settings {
-    position: fixed;
-    z-index: 999;
-    cursor: pointer;
-    top: 15px;
-    left: 455px;
-    transition: all 0.4s ease;
-    transform: rotate(180deg);
-
-    &:hover {
-      transform: rotate(180deg) scale(1.4);
+    .playground-container {
+      height: 100%;
     }
 
-    &.closed {
-      left: 15px;
-      transform: rotate(0deg);
+    .playground-gallery {
+      height: 100%;
+      overflow: scroll;
+      float: right;
+      flex: 0 0 auto;
+      border: none;
+      padding: 0;
+      margin: 0;
+      overflow: scroll;
+      background: white;
+      transition: width 0.4s ease;
+    }
+
+    .playground-gallery.closed {
+      width: 100%;
+    }
+
+    .toggle-settings {
+      position: fixed;
+      z-index: 999;
+      cursor: pointer;
+      top: 15px;
+      left: 455px;
+      transition: all 0.4s ease;
+      transform: rotate(180deg);
 
       &:hover {
-        transform: rotate(0deg) scale(1.4);
+        transform: rotate(180deg) scale(1.4);
+      }
+
+      &.closed {
+        left: 15px;
+        transform: rotate(0deg);
+
+        &:hover {
+          transform: rotate(0deg) scale(1.4);
+        }
       }
     }
+
+    .close-settings {
+      left: 470px;
+    }
+
+    .open-settings {
+      display: none;
+      left: 15px;
+    }
   }
-
-  .close-settings {
-    left: 470px;
-  }
-
-  .open-settings {
-    display: none;
-    left: 15px;
-  }
-
-
 }
